[gd_scene load_steps=14 format=3 uid="uid://b6mt6o3s6l44i"]

[ext_resource type="Script" path="res://game.gd" id="1_di1l8"]
[ext_resource type="PackedScene" uid="uid://b0tvpet4qy7kh" path="res://player.tscn" id="1_jds34"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_dsfr3"]
a = Vector2(-8, -440)
b = Vector2(-8, 456)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nejds"]
size = Vector2(1145, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8pbv"]
size = Vector2(221.529, 37)

[sub_resource type="LabelSettings" id="LabelSettings_cabtn"]
font_size = 500

[sub_resource type="LabelSettings" id="LabelSettings_8j51r"]
font_size = 500
font_color = Color(0.270588, 0.388235, 0.917647, 0.929412)

[sub_resource type="LabelSettings" id="LabelSettings_ggfhb"]
font_size = 500
font_color = Color(0.819608, 0.176471, 0.137255, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eg5xe"]
font_size = 50

[sub_resource type="RectangleShape2D" id="RectangleShape2D_affk2"]
size = Vector2(16, 425)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3ato3"]
radius = 264.0
height = 640.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ws4ey"]
size = Vector2(81, 421)

[sub_resource type="LabelSettings" id="LabelSettings_pcg6r"]
font_size = 50

[node name="game" type="Node2D"]
script = ExtResource("1_di1l8")

[node name="map" type="Node2D" parent="."]

[node name="background" type="ColorRect" parent="map"]
offset_right = 1168.0
offset_bottom = 672.0
color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[node name="separator" type="StaticBody2D" parent="map"]
collision_layer = 3
collision_mask = 3

[node name="line" type="Line2D" parent="map/separator"]
position = Vector2(832, 728)
rotation = -3.12763
points = PackedVector2Array(255.417, -43.5704, 267.927, 852.342)
default_color = Color(0.458824, 0.458824, 0.458824, 1)

[node name="collisionbox" type="CollisionShape2D" parent="map/separator"]
position = Vector2(584, 312)
shape = SubResource("SegmentShape2D_dsfr3")

[node name="wall" type="StaticBody2D" parent="map"]
collision_layer = 7
collision_mask = 7

[node name="NW" type="ColorRect" parent="map/wall"]
offset_left = -56.0
offset_top = 104.0
offset_right = 256.0
offset_bottom = 136.0
rotation = -0.523598
color = Color(0.823529, 0.823529, 0.823529, 1)

[node name="SW" type="ColorRect" parent="map/wall"]
offset_left = -32.0
offset_top = 512.0
offset_right = 280.0
offset_bottom = 544.0
rotation = 0.523598
color = Color(0.823529, 0.823529, 0.823529, 1)

[node name="NE" type="ColorRect" parent="map/wall"]
offset_left = 944.0
offset_top = -48.0
offset_right = 1256.0
offset_bottom = -16.0
rotation = 0.523598
color = Color(0.823529, 0.823529, 0.823529, 1)

[node name="SE" type="ColorRect" parent="map/wall"]
offset_left = 928.0
offset_top = 656.0
offset_right = 1240.0
offset_bottom = 688.0
rotation = -0.523598
color = Color(0.823529, 0.823529, 0.823529, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/wall"]
position = Vector2(571.5, -32)
shape = SubResource("RectangleShape2D_nejds")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="map/wall"]
position = Vector2(576, 672)
shape = SubResource("RectangleShape2D_nejds")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="map/wall"]
position = Vector2(86.8163, 39.4458)
rotation = -0.523599
shape = SubResource("RectangleShape2D_u8pbv")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="map/wall"]
position = Vector2(1064, 600)
rotation = -0.523599
shape = SubResource("RectangleShape2D_u8pbv")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="map/wall"]
position = Vector2(87.6761, 599.813)
rotation = 0.523599
shape = SubResource("RectangleShape2D_u8pbv")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="map/wall"]
position = Vector2(1064, 40)
rotation = 0.523599
shape = SubResource("RectangleShape2D_u8pbv")

[node name="UI" type="Node2D" parent="."]

[node name="firstTimer" type="Timer" parent="UI"]
wait_time = 4.0
one_shot = true
autostart = true

[node name="firstTimerLB" type="Label" parent="UI"]
offset_left = 208.0
offset_top = -40.0
offset_right = 965.0
offset_bottom = 642.0
text = "3
"
label_settings = SubResource("LabelSettings_cabtn")
horizontal_alignment = 1

[node name="pts1" type="Label" parent="UI"]
visible = false
offset_left = 224.0
offset_top = -24.0
offset_right = 509.0
offset_bottom = 658.0
text = "0"
label_settings = SubResource("LabelSettings_8j51r")

[node name="pts2" type="Label" parent="UI"]
visible = false
offset_left = 640.0
offset_top = -24.0
offset_right = 925.0
offset_bottom = 658.0
text = "0"
label_settings = SubResource("LabelSettings_ggfhb")

[node name="Timer" type="Timer" parent="UI"]
wait_time = 40.0
one_shot = true

[node name="timerLB" type="Label" parent="UI"]
visible = false
offset_left = 392.0
offset_top = 8.0
offset_right = 768.0
offset_bottom = 77.0
text = "30
"
label_settings = SubResource("LabelSettings_eg5xe")
horizontal_alignment = 1

[node name="players" type="Node2D" parent="."]

[node name="Player" parent="players" instance=ExtResource("1_jds34")]
position = Vector2(256, 256)
collision_layer = 5
collision_mask = 5

[node name="Player2" parent="players" instance=ExtResource("1_jds34")]
position = Vector2(896, 384)
collision_layer = 6
collision_mask = 6
index = "2"

[node name="p1SpawnPoint" type="Marker2D" parent="players"]
position = Vector2(256, 256)

[node name="p2SpawnPoint" type="Marker2D" parent="players"]
position = Vector2(896, 384)

[node name="middleBallSpawnPoint" type="Marker2D" parent="."]
position = Vector2(576, 320)

[node name="p1BallSpawnPoint" type="Marker2D" parent="."]
position = Vector2(384, 320)

[node name="p2BallSpawnPoint" type="Marker2D" parent="."]
position = Vector2(768, 320)

[node name="goal1" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="limit" type="StaticBody2D" parent="goal1"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal1/limit"]
position = Vector2(-8, 323.5)
shape = SubResource("RectangleShape2D_affk2")

[node name="p1Zone" type="StaticBody2D" parent="goal1"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal1/p1Zone"]
position = Vector2(-8, 320)
shape = SubResource("CapsuleShape2D_3ato3")
debug_color = Color(0.309804, 0.615686, 0.341176, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal1"]
position = Vector2(-72, 328)
shape = SubResource("RectangleShape2D_ws4ey")

[node name="goal2" type="Area2D" parent="."]
position = Vector2(1152, 640)
rotation = 3.14159
collision_layer = 4
collision_mask = 4

[node name="StaticBody2D" type="StaticBody2D" parent="goal2"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal2/StaticBody2D"]
position = Vector2(-8, 323.5)
shape = SubResource("RectangleShape2D_affk2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal2"]
position = Vector2(-72.0009, 328)
shape = SubResource("RectangleShape2D_ws4ey")

[node name="p2Zone" type="StaticBody2D" parent="goal2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal2/p2Zone"]
position = Vector2(-8, 320)
shape = SubResource("CapsuleShape2D_3ato3")
debug_color = Color(0.309804, 0.615686, 0.341176, 0.419608)

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
offset_right = 1152.0
offset_bottom = 640.0
color = Color(0, 0, 0, 0.952941)

[node name="Label" type="Label" parent="PauseMenu"]
offset_left = 464.0
offset_top = 152.0
offset_right = 656.0
offset_bottom = 240.0
text = "PAUSE"
label_settings = SubResource("LabelSettings_pcg6r")
horizontal_alignment = 1

[node name="quitToMenu" type="Button" parent="PauseMenu"]
offset_left = 512.0
offset_top = 352.0
offset_right = 648.0
offset_bottom = 408.0
text = "Quit to menu"

[node name="Resume" type="Button" parent="PauseMenu"]
offset_left = 512.0
offset_top = 256.0
offset_right = 640.0
offset_bottom = 320.0
text = "Resume"

[connection signal="timeout" from="UI/firstTimer" to="." method="_on_first_timer_timeout"]
[connection signal="timeout" from="UI/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="goal1" to="." method="_on_goal_1_body_entered"]
[connection signal="body_entered" from="goal2" to="." method="_on_goal_2_body_entered"]
[connection signal="pressed" from="PauseMenu/quitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="PauseMenu/Resume" to="." method="_on_resume_pressed"]
